--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-tooltip": "^5.28.0",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5"
   },
